<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.bill.file.activity.MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".activity.MainActivity">

        <TextView
            android:layout_weight="1"
            android:id="@+id/text_file_path"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:text="@string/activity_main_file_path"
            android:textColor="@android:color/black" />

        <ListView
            android:id="@+id/listView"
            android:layout_weight="11"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible" />

        <LinearLayout
            android:layout_weight="11"
            android:id="@+id/ll_file_list_empt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="96dp"
                android:layout_height="96dp"
                android:src="@drawable/ic_folder_open_24dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/activity_main_list_empty"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/activity_main_list_empty_hint"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_weight="2"
            android:padding="16dp"
            android:id="@+id/ll_show_romsize"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/text_show_valible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left|center_vertical"
                    android:layout_weight="1"
                    android:text="可用：" />
                <TextView
                    android:id="@+id/text_show_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="总共：" />
            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_rom_percent"
                style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
                android:max="100"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>


